<resources>
    <string name="app_name">BankApp</string>
    <string name="i_don_t_have_a_pan">I don\'t have a PAN</string>
    <string name="next">NEXT</string>
    <string name="yyyy">YYYY</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="pan_number">PAN NUMBER</string>
    <string name="first_of_the_few_steps_to_set_you_up_with_a_bank_account">First of the few steps to set you up with a Bank Account</string>
</resources>