<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewState"
            type="com.example.bankapp.viewmodel.SetupViewState" />

        <variable
            name="setupViewModel"
            type="com.example.bankapp.viewmodel.SetupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SetupActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/logo_2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/first_of_the_few_steps_to_set_you_up_with_a_bank_account"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <TextView
            android:id="@+id/pan_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pan_number"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pan_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pan_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@={setupViewModel.pan}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/birth_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pan_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/day_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dd"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="@={setupViewModel.day}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/month_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mm"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/day_input"
            app:layout_constraintTop_toBottomOf="@id/birth_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="@={setupViewModel.month}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/yyyy"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/month_input"
            app:layout_constraintTop_toBottomOf="@id/birth_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:text="@={setupViewModel.year}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="4dp"
            android:enabled="@{setupViewModel.viewState.isNextEnabled}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/no_pan_button" />

        <Button
            android:id="@+id/no_pan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_don_t_have_a_pan"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:circularflow_defaultRadius="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
